// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/DropDown multiselect snapshot 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "rgba(32, 36, 45, 0.3)",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          {
            "paddingVertical": 12,
          },
          {
            "minHeight": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "rgba(43, 120, 238, 0.15)",
              "borderRadius": 12,
              "flexDirection": "row",
              "padding": 6,
              "paddingLeft": 12,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#2B78EE",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "minHeight": 24,
                },
                {
                  "marginRight": 6,
                },
              ]
            }
          >
            English
          </Text>
          <View
            accessibilityLabel="English"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              allowFontScaling={true}
              style={
                {
                  "color": "#2B78EE",
                  "fontFamily": "Neotis",
                  "fontSize": 24,
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "rgba(32, 36, 45, 0.3)",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          undefined,
          {
            "height": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements disabled 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D1D4DB",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          undefined,
          {
            "height": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements type valid 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          undefined,
          {
            "height": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements type wrong 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          [
            {
              "paddingBottom": 12,
            },
            {
              "paddingBottom": 8,
            },
          ],
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(245, 77, 61, 0.15)",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          {
            "backgroundColor": "#000",
            "borderColor": "#000",
            "height": 70,
            "width": 400,
          },
          undefined,
          {
            "height": 70,
          },
          {
            "borderColor": "#000",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly without array 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "rgba(32, 36, 45, 0.3)",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          undefined,
          {
            "height": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly without array with text and font 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 300,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "color": "#F54D3D",
          },
        ]
      }
    >
      *
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "rgba(32, 36, 45, 0.3)",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          undefined,
          undefined,
          {
            "height": 72,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown selectItemClose 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 21,
            "lineHeight": 27,
            "minHeight": 27,
          },
          {
            "paddingBottom": 12,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "rgba(32, 36, 45, 0.3)",
            "borderRadius": 12,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "paddingLeft": 27,
            "paddingRight": 18,
          },
          {
            "backgroundColor": "#000",
            "borderColor": "#000",
            "height": 70,
            "width": 400,
          },
          undefined,
          {
            "height": 70,
          },
          {
            "borderColor": "#000",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 30,
              "minHeight": 30,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#9BA1B0",
            "fontFamily": "Neotis",
            "fontSize": 24,
            "marginRight": 6,
          }
        }
      >
        
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "minHeight": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        subtitle
      </Text>
    </View>
  </View>
</View>
`;
